themeing; pls make firebase work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Nogrammers-android</string>
+    <string name="hey_duncan">Hey Duncan!</string>
 </resources>
