--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="hey_duncan">Hey Duncan!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="post_shoutout">Post Shoutout</string>
+    <string name="author">Author</string>
+    <string name="who_s_a_good_roo">Who\'s a good roo?</string>
+    <string name="cancel">Cancel</string>
+    <string name="events">Events</string>
+    <string name="todo_put_profile_here">TODO: put profile here</string>
+    <string name="todo_put_events_here">TODO: put events here</string>
 </resources>
