--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="events">Events</string>
     <string name="todo_put_profile_here">TODO: put profile here</string>
     <string name="todo_put_events_here">TODO: put events here</string>
+    <string name="create_announcement">Create announcement</string>
 </resources>
