--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="post_announcement">Post announcement</string>
     <string name="post_to_facebook">Post to Facebook</string>
     <string name="send_to_listserv">Send to Listserv</string>
+    <string name="profile_image">Profile image</string>
+    <string name="cynthia_sheng">Cynthia Sheng</string>
+    <string name="peace_love_duncan">Peace, love, Duncan</string>
+    <string name="president">President</string>
+    <string name="add_position">+ add position</string>
 </resources>
