--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="bio">bio</string>
     <string name="password">Password</string>
     <string name="login_signup">Login/Signup</string>
+    <string name="edit_profile">Edit profile</string>
 </resources>
