--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,10 @@
     <string name="president">President</string>
     <string name="add_position">+ add position</string>
     <string name="cys4">cys4</string>
+    <string name="name">[Name]</string>
+    <string name="netid">NetID</string>
+    <string name="bio">bio</string>
+    <string name="password">Password</string>
+    <string name="login_signup">Login/Signup</string>
+    <string name="edit_profile">Edit profile</string>
 </resources>
