--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,11 @@
     <string name="description">Description</string>
     <string name="description_hint">Add description</string>
     <string name="tags">Tags</string>
-    <string name="add_event_image">Add event image</string>
+    <string name="add_event_image"><u>Add event image</u></string>
     <string name="post_event">Post event</string>
+    <string name="start_date"><u>start date</u></string>
+    <string name="end_date"><u>end date</u></string>
+    <string name="start_time"><u>start time</u></string>
+    <string name="end_time"><u>end time</u></string>
+    <string name="dash">-</string>
 </resources>
