icons, autofill, internet connection, gif, login keyboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="netid">NetID</string>
     <string name="bio">bio</string>
     <string name="password">Password</string>
-    <string name="login_signup">Login/Signup</string>
+    <string name="sign_in">Sign in</string>
     <string name="edit_profile">Edit profile</string>
     <string name="suggested_tags">Suggested Tags</string>
     <string name="action_filter">filter</string>
@@ -80,4 +80,5 @@
     <string name="save_event">Save Event</string>
     <string name="users_attending">Users Attending</string>
     <string name="admin_password">Admin password</string>
+    <string name="please_sign_in_using_your_esther_credentials">Please sign in using your ESTHER credentials</string>
 </resources>
