Updated login instructions string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,6 @@
     <string name="admin_password">Admin password</string>
     <string name="login">Log In</string>
     <string name="login_msg">Log in with your Rice NetID and password!</string>
-    <string name="please_sign_in_using_your_esther_credentials">Please sign in using your ESTHER credentials</string>
+    <string name="please_sign_in_using_your_esther_credentials">Please sign in using your NETID and CANVAS credentials</string>
     <string name="coming_soon">Coming soon!</string>
 </resources>
